--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
 	</div>
 </nav>
 <!-- кнопка наверх -->
-<a href="#home">
+<a href="#">
 	<div class="up-btn">
 		<i class="fas fa-chevron-up"></i>
 	</div>
